# gazelle:python_generation_mode project
# gazelle:python_test_file_pattern test_*.py

load("@bazel_gazelle//:def.bzl", "gazelle", "gazelle_binary")

exports_files(["gazelle_python.yaml"])

gazelle_binary(
    name = "gazelle_multilang",
    languages = [
        "@rules_python_gazelle_plugin//python",
    ],
)

gazelle(
    name = "gazelle",
    args = [
        "-r",
        "python",
        "test/registered",
    ],
    gazelle = ":gazelle_multilang",
)
