load("@rules_python//python:defs.bzl", "py_library")

exports_files([
    "pyproject.toml",
    "pyproject_cpu.toml",
    "pyproject_npu.toml",
    "pyproject_other.toml",
    "pyproject_xpu.toml",
])

py_library(
    name = "sglang",
    srcs = glob(["sglang/**/*.py"]),
    data = glob(
        [
            "sglang/jit_kernel/**/*",
            "sglang/srt/**/*",
        ],
        exclude = ["**/*.py"],
        allow_empty = True,
    ),
    deps = [
        "//python/sglang/srt:environ",
        "//python/sglang/srt/platforms:pkg",
        "//python/sglang/srt/plugins:pkg",
    ],
    imports = ["."],
    visibility = ["//visibility:public"],
)
