[workspace]
resolver = "3"
members = ["sglang-grpc", "sglang-mm"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

# Single source of truth for dependency versions across workspace members.
# Members pull these in with `dep = { workspace = true }` (plus extra features
# where needed).
[workspace.dependencies]
async-stream = "0.3"
pyo3 = { version = "0.29.0", features = ["extension-module"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["net"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }

# Profiles only take effect at the workspace root; per-member profile sections
# are ignored by cargo. Per-package tweaks live in the override tables below.
[profile.release]
lto = "thin"
strip = true
opt-level = 2
codegen-units = 1

[profile.dev]
opt-level = 0
debug = 1
