[build-system]
requires = ["maturin>=1.5.1,<2.0"]
build-backend = "maturin"

[project]
name = "sglang_router"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]
dynamic = ["version"]

[tool.maturin]
bindings = 'pyo3'
